<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.ffffffff0x</groupId>
    <artifactId>BerylEnigma</artifactId>
    <version>1.14.1</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <argLine>-Dfile.encoding=UTF-8</argLine>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>17</maven.compiler.release>
        <javafx.version>17.0.2</javafx.version>
<!--        <classifier>win</classifier>-->
<!--        <com.twelvemonkeys.version>3.7.0</com.twelvemonkeys.version>-->
    </properties>
    <build>
        <resources>
            <resource>
                <!-- 这里是放在 src/main/java-->
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.fxml</include>
                    <include>**/*.css</include>
                    <!-- 如果想要弄个包名专门放fxml文件，像上一行这样添加设置 -->
                    <!-- 之后，使用getResource("fxml/xx.fxml")这样子 -->
                </includes>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
                <filtering>false</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>
                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</arg>
                        <arg>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</arg>
                        <arg>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.geom=com.jfoenix</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.scene.text=com.jfoenix</arg>
                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=com.jfoenix</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=com.jfoenix</arg>
                        <arg>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</arg>
                        <arg>--add-exports=javafx.graphics/com.sun.javafx.util=com.jfoenix</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>fffffff0x.beryenigma.App.Lanucher</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <jlinkImageName>beryenigma</jlinkImageName>
                    <launcher>launcher</launcher>
                    <mainClass>beryenigma/ffffffff0x.beryenigma.Main</mainClass>
                    <options>
                        <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                        <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
                        <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
                        <option>--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
                        <option>--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                        <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
<!--                        <option>&#45;&#45;illegal-access=permit</option>-->
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
<!--            <classifier>${classifier}</classifier>-->
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
<!--            <classifier>${classifier}</classifier>-->
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
<!--            <classifier>${classifier}</classifier>-->
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.openjfx</groupId>-->
<!--            <artifactId>javafx-swing</artifactId>-->
<!--            <version>${javafx.version}</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
<!--            <classifier>${classifier}</classifier>-->
        </dependency>

        <dependency>
            <groupId>com.jfoenix</groupId>
            <artifactId>jfoenix</artifactId>
            <version>9.0.10</version>
        </dependency>

        <dependency>
            <groupId>apache</groupId>
            <artifactId>ApacheCommons</artifactId>
            <version>1.1</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/lib/ApacheCommons-onjdk17-1.1.jar</systemPath>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.9</version>
        </dependency>

        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core-javase</artifactId>
            <version>3.5.0</version>
            <scope>system</scope>
            <systemPath>${pom.basedir}/lib/zxing-core-javase-onjdk17-3.5.0.jar</systemPath>
        </dependency>

        <!-- https://mvnrepository.com/artifact/io.github.classgraph/classgraph -->
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>4.8.154</version>
        </dependency>

        <!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.imageio</groupId>-->
<!--            <artifactId>imageio-jpeg</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.imageio</groupId>-->
<!--            <artifactId>imageio-tiff</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.common</groupId>-->
<!--            <artifactId>common-lang</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.common</groupId>-->
<!--            <artifactId>common-io</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.common</groupId>-->
<!--            <artifactId>common-image</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.twelvemonkeys.imageio</groupId>-->
<!--            <artifactId>imageio-core</artifactId>-->
<!--            <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--        <groupId>com.twelvemonkeys.imageio</groupId>-->
<!--        <artifactId>imageio-metadata</artifactId>-->
<!--        <version>${com.twelvemonkeys.version}</version>-->
<!--        </dependency>-->


<!--        <dependency>-->
<!--            <groupId>org.controlsfx</groupId>-->
<!--            <artifactId>controlsfx</artifactId>-->
<!--            <version>8.40.17</version>-->
<!--        </dependency>-->
    </dependencies>

</project>